hero section integration

--- a/src/styles/base/_global.sass
+++ b/src/styles/base/_global.sass
@@ -15,19 +15,20 @@ body
     top: 0
     left: 0
     overflow: hidden
-    font: 1.4rem/1.5 $RebondGrotesqueLight
+    font: 1.4rem/1.5 $RebondGrotesqueMedium
+    color: white
+    background: $black
+
+// .wrapper
+//   width: 100%
+//   box-sizing: border-box
+//   padding-left: calc(50% - var(--container) / 2)
+//   padding-right: calc(50% - var(--container) / 2)
 
 .wrapper
   width: 100%
-  box-sizing: border-box
-  padding-left: calc(50% - var(--container) / 2)
-  padding-right: calc(50% - var(--container) / 2)
-
-.wrapper
-  width: 100%
-  max-width: 1600px
+  max-width: 1680px
   margin-right: auto
   margin-left: auto
-  padding-right: 20px
-  padding-left: 20px
+  padding: 60px
   box-sizing: border-box
