--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -5,10 +5,13 @@
 @import "base/global"
 
 // Shared
+@import "shared/sections"
 @import "shared/links"
+@import "shared/details"
 
 // Sections
 @import "sections/hero"
 
 // Components
+@import "components/text-block"
 @import "components/button"
