cursor, circleButton anim and clipped background anim

--- a/src/styles/base/_variables.sass
+++ b/src/styles/base/_variables.sass
@@ -7,6 +7,7 @@ $RebondGrotesqueMedium: 'Rebond Grotesk Medium', sans-serif
 $RebondGrotesqueLight: 'Rebond Grotesk Light', sans-serif
 
 // Colors
+$trueBlack: #000000
 $black: #1C1C1C
 $white: #ffffff
 $grey: #A6A6A6
