--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -13,5 +13,6 @@
 @import "sections/hero"
 
 // Components
+@import "components/cursor"
 @import "components/text-block"
-@import "components/button"
+@import "components/circle-button"
