--- a/src/styles/base/_global.sass
+++ b/src/styles/base/_global.sass
@@ -17,7 +17,7 @@ body
     overflow: hidden
     font: 1.4rem/1.5 $RebondGrotesqueMedium
     color: white
-    background: $black
+    background: $trueBlack
 
 // .wrapper
 //   width: 100%
