--- a/src/styles/sections/_hero.sass
+++ b/src/styles/sections/_hero.sass
@@ -3,15 +3,26 @@
 
     .hero__background
         position: absolute
+        width: 1800px
+        height: 1800px
         top: 50%
         left: 50%
-        transform: translate3d(-50%, -50%, 0)
+        transform: translate(-50%, -50%)
         z-index: -10
+        // clip-path: polygon(38% 20%, 62% 20%, 62% 82%, 38% 82%)
+        clip-path: inset(38% round 0%)          
+        
+        .hero__background__container
+            position: absolute
+            top: 50%
+            left: 50%
+            transform: translate3d(-50%, -50%, 0)
+            z-index: -10
 
-        .hero__background__image
-            max-width: unset
-            transform-origin: center
-            transform: scale(0.45)
+            .hero__background__image
+                max-width: unset
+                transform-origin: center
+                transform: scale(0.45)
     
     .hero__content
         width: 100%
@@ -32,12 +43,7 @@
             text-transform: uppercase
             border-bottom: 4px solid $white
 
-
         .hero__content__scroll-button
-            width: 70px
-            height: 70px
-            border-radius: 50%
-            background: $white
             margin-top: 80px
             
 @media all and ( max-width: 1100px )
