--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -8,11 +8,13 @@
 @import "shared/sections"
 @import "shared/links"
 @import "shared/details"
+@import "shared/animations"
 
 // Sections
 @import "sections/hero"
 
 // Components
 @import "components/cursor"
+@import "components/loader"
 @import "components/text-block"
 @import "components/circle-button"
