--- a/src/styles/components/_circle-button.sass
+++ b/src/styles/components/_circle-button.sass
@@ -1,14 +1,20 @@
 .circle-button
     position: relative
+    width: 80px
+    height: 80px
+    border-radius: 50%
+    display: flex
+    justify-content: center
+    align-items: center
     
     .circle-button__circle
         position: absolute
         top: 50%
         left: 50%
-        transform: translate(-50%, -50%)
-        width: 80px
-        height: 80px
+        width: 100%
+        height: 100%
         border-radius: 50%
+        transform: translate(-50%, -50%)
         background: $white
         z-index: -1
 
