hero section animations done

--- a/src/styles/components/_text-block.sass
+++ b/src/styles/components/_text-block.sass
@@ -6,8 +6,10 @@
     .text-block__line
         line-height: 13px
         margin: 1px 0
+        overflow: hidden
 
         .text-block__line__inner
+            display: inline-block
             line-height: 13px
 
 .text-block--marged
