--- a/src/styles/sections/_hero.sass
+++ b/src/styles/sections/_hero.sass
@@ -9,7 +9,6 @@
         left: 50%
         transform: translate(-50%, -50%)
         z-index: -10
-        // clip-path: polygon(38% 20%, 62% 20%, 62% 82%, 38% 82%)
         clip-path: inset(38% round 0%)          
         
         .hero__background__container
@@ -36,12 +35,23 @@
             text-transform: uppercase
 
         .hero__content__title
+            position: relative
             height: fit-content
             text-align: center
             font: 110px $RebondGrotesqueLight
             letter-spacing: -7px
             text-transform: uppercase
-            border-bottom: 4px solid $white
+
+            .hero__content__title__content > span
+                display: inline-block
+
+            .hero__content__title__border
+                position: absolute
+                bottom: 0
+                left: 9px
+                width: 95%
+                height: 4px
+                background: $white
 
         .hero__content__scroll-button
             margin-top: 80px
